SCSS/style.scss
$redcolor: #d35266;
$blackcolor: #383838;
$greycolor: #888;

@font-face {
  font-family: "Gotham Rounded";
  src: url("../fonts/GothamRnd-Light.woff");
  font-weight: 400;
}

@font-face {
  font-family: "Gotham Bold";
  src: url("../fonts/Gotham-Bold.woff");
  font-weight: 700;
}

@font-face {
  font-family: "Helvetica Neue Light";
  src: url("../fonts/HelveticaNeueCyr-Light.woff");
  font-weight: 400;
}

.gotham-bold {
  font-family: "Gotham Bold", sans-serif;
}

.gotham-rounded {
  font-family: "Gotham Rounded", sans-serif;
}

.helvetica-light {
  font-family: "Helvetica Neue Light", sans-serif;
}

body {
  overflow-x: hidden;
  max-width: 100%;
}

.uppernav {
  background-color: $blackcolor;

  a {
    text-decoration: none;
    color: white;
  }
}

.menubar {
  a {
    padding-left: 10px;
  }
}

a:hover {
  color: $redcolor;
}

.postadbutton {
  padding: 10px;
  background-color: $redcolor;
  border-radius: 10px;
}

.btnactive {
  color: $redcolor;
}

.main-logo {
  height: 70px;
  width: auto;
  max-height: 80px;
  color: white;
}

.site-title {
  padding-left: 20px;
  font-family: "Gotham Bold", sans-serif;
}

.searchsection {
  background-image: url("../assets/music-store.svg");
  background-size: auto;
  background-repeat: no-repeat;
  background-color: $redcolor;
  font-family: "Gotham Bold", sans-serif;
  padding-top: 50px;
  padding-bottom: 50px;
}

.dropdown-menu {
  width: 70%;

  @media (min-width: 768px) {
    width: 50%;
  }
}

.submitbutton {
  background-color: black;
  color: white;
}

.formitem {
  margin-top: 10px;
}

form {
  div {
    width: 100%;
  }
}

.carousel-item {
  align-self: center;
}

.carousel-ad {
  width: 100%;
  height: 100%;

  .card-title {
    font-size: 90%;
  }

  .card-text {
    font-size: 70%;
  }

  img {
    object-fit: scale-down;
    border-radius: 5%;
  }

  .card-body {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: repeat(3, 30px);
  }

  @media (min-width: 768px) {
    width: 90%;
    height: 100%;
  }
}

.carouselindicators {
  display: none;
  margin-top: 500px;

  @media (min-width: 768px) {
    display: block;
  }
}

.carouselcontrol {
  display: none;
  background-color: $greycolor;
  border-radius: 5px;
  padding: 20px;
  height: 10px;
  width: auto;
  margin-top: 200px;

  @media (min-width: 768px) {
    display: flex;
    margin-top: 140px;
  }
}

.firstadsection {
  max-width: 680px;
}

.secondadsection {
  margin-left: -30px;
  width: 115%;
  background-color: white;

  .carousel-inner {
    width: 90%;
    margin: 0 auto;
  }

  @media (min-width: 768px) {
    margin-left: 0;
    width: 100%;
  }
}

#demo2 {
  width: 100%;
}

.card-img-top {
  max-width: 300px;
  min-height: 300px;
  max-height: 300px;
}

.subtitle {
  font-family: "Gotham Rounded", sans-serif;
  font-size: 19px;
}

.carousel-categories {
  background-color: lightgrey;

  .carouselcontrol {
    background-color: $greycolor;
    border-radius: 5px;
    padding: 15px;
    height: 10px;
    width: auto;
    top: 5%;

    @media (min-width: 768px) {
      top: 15%;
    }
  }
}

.carousel-categories-item {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr;
  background-color: white;
  border: 0;

  @media (min-width: 768px) {
    grid-template-columns: 1fr 1fr 1fr 1fr;
  }
}

.resultstext {
  .card-title {
    text-decoration: none;
    color: $greycolor;
  }

  .card-text {
    text-decoration: none;
    color: $greycolor;
  }
}

.morestoriesimage {
  background-image: url("../assets/7ee8a531-d613-4434-ae00-85eec5165219_e6f18be3-456a-4754-9a57-1b8a6dea92a2.jpg");
  background-size: contain;
  background-repeat: no-repeat;
  height: 100px;

  @media (min-width: 768px) {
    background-size: contain;
  }
}

.image2 {
  background-image: url("../assets/guitarlandscape.png");
}

.image3 {
  background-image: url("../assets/guitarmetal.png");
}

.image4 {
  background-image: url("../assets/guitaracousticlandscape.jpeg");
}

.image5 {
  background-image: url("../assets/guitarblack.png");
}

footer {
  border-top: 1px lightgrey solid;
  width: 100%;

  .links-footer-section {
    margin-left: 20%;
    margin-right: 5%;

    h5 {
      color: $redcolor;
      border-bottom: 1px black solid;
    }

    ul {
      li {
        a {
          color: $blackcolor;
          text-decoration: none;
        }

        list-style-type: none;
      }
    }

    .categories-footer-section {
      margin-left: -30px;

      @media (min-width: 768px) {
        margin-left: 20%;
      }
    }

    .navigation-footer-section {
      margin-left: -30px;

      @media (min-width: 768px) {
        margin-left: 20%;
      }
    }

    .location-footer-section {
      margin-left: -30px;

      .locationbutton {
        h6 {
          color: $redcolor;
          font-weight: bold;
        }

        p {
          border: 1px black solid;
          font-weight: bold;
          padding-left: 5px;
          padding-right: 5px;
          margin-left: 10px;
        }
      }

      @media (min-width: 768px) {
        margin-left: 20%;
      }
    }
  }
}

